# VRCT

./: .eslintrc.json  .gitignore  AudioRecorder.py  AudioTranscriber.py  LICENSE  README.ja.md  README.jp.md  README.ko.md  README.kr.md  README.md  README.txt  README.zh-Hant.md  README.zh.md  REDME.txt  VRCT.py  VRC_ChatBox_translator.py  audio_recorder.py  audio_transcriber.py  audio_utils.py  backend.spec  backend_cuda.spec  build.bat  build_cuda.bat  build_nuitka.bat  clean.py  config.py  controller.py  ctk_scrollable_dropdown.py  data.js  index.html  install.bat  languages.py  locales.yml  main.py  map-stack.js  model.py  notification.py  osc_tools.py  package-lock.json  package.json  (+20 more)
.github/: FUNDING.yml
CTkScrollableDropdown/: __init__.py  ctk_scrollable_dropdown.py  ctk_scrollable_dropdown_frame.py
bat/: build.bat  build_cuda.bat  install.bat  install_zluda.bat
batch/: restart.bat  update.bat
docs/: readme_build.md
installer/: Install.nsi  Uninstall.nsi  installer.nsi
locales/: config.js  en.json  en.yml  ja.json  ja.yml  ko.json  ko.yml  readme_first.txt  useI18n.js  zh-Hans.json  zh-Hans.yml  zh-Hant.json  zh-Hant.yml  zh.yml
spec/: backend.spec  backend_cuda.spec
src-python/: backend_test.py  config.json  config.py  controller.py  device_manager.py  errors.py  mainloop.py  model.py  mypy.ini  test.py  test_audio_recorder_compatibility.py  test_client.py  test_compute_device_list.py  test_compute_device_list_with_mock.py  test_endpoints.py  test_speaker_automatic_threshold.py  test_speaker_device_config_persistence.py  test_speaker_device_error_handling_logic.py  test_speaker_device_unavailability.py  test_speaker_device_unavailability_flow.py  test_ui_device_display.py  test_ui_device_display_integration.py  test_ui_device_display_simple.py  test_zluda_config.py  test_zluda_detection.py  test_zluda_device_enumeration.py  test_zluda_device_list_unit.py  test_zluda_init_manual.py  test_zluda_installer_class.py  test_zluda_integration_demo.py  test_zluda_manual.py  test_zluda_runtime_error_handling.py  utils.py  webui_controller.py  webui_mainloop.py  zluda_installer.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  vrct_capability.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi  template.nsi
src-tauri/plugins/: index.js
src-tauri/plugins/plugin_examples/: index.jsx  plugin_info.json
src-tauri/plugins/plugin_examples/main_container/: MainContainer.jsx
src-tauri/plugins/plugin_examples/store/: store.js
src-tauri/src/: lib.rs  main.rs
src-ui/: _test_data.js  store.js  ui_config_setter.js  ui_configs.js  useSettingsLogics.js  utils.js
test_model/: config.py  languages.py  locales.yml  main.py  window_config.py
utils/: clean.py  update_version.py  zip.py
vrct_gui/: _CreateConfirmationModal.py  _CreateDropdownMenuWindow.py  (+11 more)
(+824 files in other folders)
