[package]
name = "VRCT"
version = "0.0.0"
description = "VRCT Application"
authors = ["misyaguziya"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vrct_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.2.0", features = [] }

[dependencies]
tauri = { version = "=2.5.1", features = ["devtools"] }
tauri-plugin-opener = "=2.2.6"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
tauri-plugin-fs = "=2.2.1"
tauri-plugin-http = "=2.4.3"
tauri-plugin-shell = "2.2.1"
font-kit = "=0.14.2"
reqwest = "=0.12.15"
base64 = "=0.22.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "=2.2.0"
